{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 25,
  "lineage": "3e2a56ed-0d3d-256f-44b0-f06e3eb33d95",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:447398421702:loadbalancer/app/auto-healing-web-dev-alb/352b4bc9b37fc41a",
            "arn_suffix": "app/auto-healing-web-dev-alb/352b4bc9b37fc41a",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "auto-healing-web-dev-alb-13649374.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:447398421702:loadbalancer/app/auto-healing-web-dev-alb/352b4bc9b37fc41a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "auto-healing-web-dev-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-03b38ca418bcc90d4"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03220bc5090ece8f9"
              },
              {
                "subnet_id": "subnet-0c99d3856d286ba46"
              }
            ],
            "subnets": [
              "subnet-03220bc5090ece8f9",
              "subnet-0c99d3856d286ba46"
            ],
            "tags": {
              "Name": "auto-healing-web-dev-alb"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "auto-healing-web-dev-alb",
              "Project": "auto-healing-web"
            },
            "vpc_id": "vpc-0e1bbecd26be68bb4",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.security_groups.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:447398421702:listener/app/auto-healing-web-dev-alb/352b4bc9b37fc41a/1ac68edf53736fe0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:447398421702:targetgroup/auto-healing-web-dev-tg/985253dd75840d12",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:447398421702:listener/app/auto-healing-web-dev-alb/352b4bc9b37fc41a/1ac68edf53736fe0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:447398421702:loadbalancer/app/auto-healing-web-dev-alb/352b4bc9b37fc41a",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "auto-healing-web"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.this",
            "module.security_groups.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:447398421702:targetgroup/auto-healing-web-dev-tg/985253dd75840d12",
            "arn_suffix": "targetgroup/auto-healing-web-dev-tg/985253dd75840d12",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:447398421702:targetgroup/auto-healing-web-dev-tg/985253dd75840d12",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:447398421702:loadbalancer/app/auto-healing-web-dev-alb/352b4bc9b37fc41a"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "auto-healing-web-dev-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "auto-healing-web-dev-tg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "auto-healing-web-dev-tg",
              "Project": "auto-healing-web"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e1bbecd26be68bb4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:447398421702:security-group/sg-03b38ca418bcc90d4",
            "description": "Allow inbound HTTP/HTTPS to the ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03b38ca418bcc90d4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "auto-healing-web-dev-alb-sg",
            "name_prefix": "",
            "owner_id": "447398421702",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "auto-healing-web-dev-alb-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "auto-healing-web-dev-alb-sg",
              "Project": "auto-healing-web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e1bbecd26be68bb4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:447398421702:security-group/sg-0eabb4319ad5b7b02",
            "description": "Allow inbound traffic from ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eabb4319ad5b7b02",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03b38ca418bcc90d4"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "auto-healing-web-dev-instance-sg",
            "name_prefix": "",
            "owner_id": "447398421702",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "auto-healing-web-dev-instance-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "auto-healing-web-dev-instance-sg",
              "Project": "auto-healing-web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e1bbecd26be68bb4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.alb",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:447398421702:internet-gateway/igw-0bbd2ecadc3e7d9a6",
            "id": "igw-0bbd2ecadc3e7d9a6",
            "owner_id": "447398421702",
            "tags": {
              "Name": "auto-healing-web-dev-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "auto-healing-web-dev-igw",
              "Project": "auto-healing-web"
            },
            "vpc_id": "vpc-0e1bbecd26be68bb4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:447398421702:route-table/rtb-09fc04835c09ba843",
            "id": "rtb-09fc04835c09ba843",
            "owner_id": "447398421702",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bbd2ecadc3e7d9a6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "auto-healing-web-dev-rt-public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "auto-healing-web-dev-rt-public",
              "Project": "auto-healing-web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e1bbecd26be68bb4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d1b93659ad4794d7",
            "route_table_id": "rtb-09fc04835c09ba843",
            "subnet_id": "subnet-0c99d3856d286ba46"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03a5a536ce597cbf1",
            "route_table_id": "rtb-09fc04835c09ba843",
            "subnet_id": "subnet-03220bc5090ece8f9"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:447398421702:subnet/subnet-0c99d3856d286ba46",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c99d3856d286ba46",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "447398421702",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "auto-healing-web-dev-public-us-east-1a"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "auto-healing-web-dev-public-us-east-1a",
              "Project": "auto-healing-web"
            },
            "vpc_id": "vpc-0e1bbecd26be68bb4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:447398421702:subnet/subnet-03220bc5090ece8f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03220bc5090ece8f9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "447398421702",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "auto-healing-web-dev-public-us-east-1b"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "auto-healing-web-dev-public-us-east-1b",
              "Project": "auto-healing-web"
            },
            "vpc_id": "vpc-0e1bbecd26be68bb4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:447398421702:vpc/vpc-0e1bbecd26be68bb4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09fc7915485e29a95",
            "default_route_table_id": "rtb-0dd9aee545550bbd7",
            "default_security_group_id": "sg-084ce00a09183a886",
            "dhcp_options_id": "dopt-0073d6a7cb4d10a57",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e1bbecd26be68bb4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0dd9aee545550bbd7",
            "owner_id": "447398421702",
            "tags": {
              "Name": "auto-healing-web-dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "auto-healing-web-dev-vpc",
              "Project": "auto-healing-web"
            }
          }
        }
      ]
    }
  ]
}